@@ -69,6 +69,8 @@ typedef enum {
 	LC_VIEW_STEP_LAST,
 	LC_VIEW_STEP_CHOOSE,
 	LC_VIEW_STEP_SET,
+	LC_VIEW_STEP_INSERT,
+	LC_VIEW_STEP_DELETE,
 	LC_VIEW_STOP,
 	LC_VIEW_PLAY,
 	LC_VIEW_CAMERA_MENU,
